~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 3.1 version

* When doing --upgrade, postgresql-setup now guards against upgrading when
  the old postgresql server is still running.

Bugfixes in 3.1 version

* The 'pg_upgrade --link' option is not used for non-in-place upgrades
  scenarios.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 3.0 version

* Use 'pg_upgrade --username' instead of 'pg_upgrade --user' for
  PostgreSQL >= 9.4.

* postgresql-setup now works if postgres user is /bin/nologin

* Legacy scripts are now generated from single template file, also are
  simplified a bit.

* There are now options (by upgrade configuration file) how to upgrade from an
  PG stack running in SCL (Software Collections)

* documentation README.rpm-dist is generated from docbook sources

* The sysvinit support should be OK finally, sysvinit system is now
  automatically detected without --with-sysvinit configure option.

* The starting timeout is now configurable via PGSTARTTIMEOUT.

* Service file and initscript now support running of PostgreSQL extensions
  built against specific software collections, specified by PGSCLS
  environment variable.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 2.0 version

* With configre --with-sysvinit we are able to install sysvinit
  configuration instead of systemd.

* For systemd systems, the "legacy" scripts for 'service postgresql initdb'
  and 'service postgresql upgrade' are installed.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New in 1.0 version

* The postgresql-check-db-dir is now more strict to admin's configuration
  and tries to avoid future incompatibilities by warning about the
  /etc/systemd/system/postgresql@instance.service.d/ non-existence.
  Idea by Honza Horák.

* The /etc/postgresql/* path is not used for configuration as it does not