@@ -1,5 +1,15 @@
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+Bugfixes in 3.2 version
+
+* Fix regression of setting the default pgdata variable for non-default
+  unit names.  This broke --new-systemd-unit option and --initdb, because
+  the postgresql-setup logic tried to create the data directory on the
+  same place as the _default_ unit stores data (instead of explicitly
+  asking for --datadir option).
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
 New in 3.1 version
 
 * When doing --upgrade, postgresql-setup now guards against upgrading when
